--- a/src/pages/partials/header.html
+++ b/src/pages/partials/header.html
@@ -8,11 +8,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item" id="aboutUs-link">
-                    <a class="nav-link" href="aboutUs.html">About us</a>
+                <li class="nav-item <%= page === 'aboutUs' ? 'active' : '' %>">
+                    <a class="nav-link <%= page === 'aboutUs' ? 'disabled' : '' %>" href="aboutUs.html">About us</a>
                 </li>
-                <li class="nav-item" id="contacts-link">
-                    <a class="nav-link" href="contacts.html" tabindex="-1" aria-disabled="true">Contacts</a>
+                <li class="nav-item <%= page === 'contacts' ? 'active' : '' %>" id="contacts-link">
+                    <a class="nav-link <%= page === 'contacts' ? 'disabled' : '' %>" href="contacts.html">Contacts</a>
                 </li>
             </ul>
         </div>
